# PLP4e

./: template.hsfiles
sections/2.2/handwritten-dfa/: README.md  handwritten-dfa.cabal  input.txt  package.yaml
sections/2.2/handwritten-dfa/src/: BetterState.hs  DFA.hs  InitialState.hs  Lexer.hs  Main.hs  StateMonad.hs  Token.hs
sections/2.2/handwritten-dfa/src/Lexer/: DFA.hs  Lexer.hs  Token.hs
