name:                handwritten-dfa
version:             0.1.0.0
homepage:            https://github.com/hjkcai/PLP4e
author:              Jingkun Hua
maintainer:          huajingkun1214@gmail.com
copyright:           2019 Jingkun Hua
category:            Exercises
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable handwritten-dfa
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
